--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "rpx2vw"
     ],
     "version": "0.0.1",
-    "publisher": "zhengyuyang",
+    "publisher": "yuyang zheng",
     "engines": {
         "vscode": "^1.29.0"
     },
